- Fixed issue with header disappearing behind content on smaller screens

--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -8,7 +8,7 @@ root {
   flex-direction: column;
   align-items: center;
   width: 90vw;
-  height: 220vh;
+  height: auto;
   padding: 0;
   margin: auto;
   background-color: #D8E6FF;
@@ -29,7 +29,7 @@ header {
   color:  #333333;
   width: 100%;
   margin: 0;
-  height: 80vh;
+  height: 40vh;
   overflow-x: hidden;
 }
 
